@@ -1,3 +1,7 @@
+2003-08-13  Brent Welch <welch@panasas.com>
+
+	* counter.tcl: Fixed math in counter::start and counter::stop
+
 2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
